Update public api