@@ -2,7 +2,6 @@ package com.extole.client.rest.impl.campaign.component.setting;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
@@ -10,30 +9,29 @@ import com.extole.client.rest.campaign.component.setting.SettingType;
 import com.extole.client.rest.campaign.configuration.CampaignComponentConfiguration;
 import com.extole.client.rest.campaign.configuration.CampaignComponentSocketConfiguration;
 import com.extole.client.rest.campaign.configuration.CampaignComponentVariableConfiguration;
+import com.extole.client.rest.campaign.configuration.ComponentFacetSocketFilterConfiguration;
+import com.extole.client.rest.campaign.configuration.ComponentTypeSocketFilterConfiguration;
+import com.extole.client.rest.campaign.configuration.SocketFilterConfiguration;
 import com.extole.client.rest.impl.campaign.upload.CampaignUploadContext;
+import com.extole.model.entity.campaign.SocketFilterType;
+import com.extole.model.service.campaign.setting.ComponentFacetSocketFilterBuilder;
+import com.extole.model.service.campaign.setting.ComponentTypeSocketFilterBuilder;
 import com.extole.model.service.campaign.setting.SettingDisplayNameLengthException;
 import com.extole.model.service.campaign.setting.SettingIllegalCharacterInDisplayNameException;
 import com.extole.model.service.campaign.setting.SettingInvalidNameException;
 import com.extole.model.service.campaign.setting.SettingNameLengthException;
 import com.extole.model.service.campaign.setting.SettingTagLengthException;
 import com.extole.model.service.campaign.setting.SocketBuilder;
+import com.extole.model.service.campaign.setting.SocketFilterBuilder;
 import com.extole.model.service.campaign.setting.VariableValueKeyLengthException;
 
 @Component
 public class SocketUploader implements SettingUploader<CampaignComponentSocketConfiguration> {
 
-    @SuppressWarnings({"unchecked"})
-    private final List<SettingUploader> settingUploaders;
-    private final DefaultSettingUploader defaultSettingUploader;
-
-    public SocketUploader(List<SettingUploader> settingUploaders,
-        DefaultSettingUploader defaultSettingUploader) {
-        this.settingUploaders = settingUploaders;
-        this.defaultSettingUploader = defaultSettingUploader;
-    }
-
+    @SuppressWarnings("unchecked")
     @Override
-    public void upload(CampaignUploadContext context, CampaignComponentConfiguration component,
+    public void upload(SettingUploaderRegistry uploaderRegistry,
+        CampaignUploadContext context, CampaignComponentConfiguration component,
         CampaignComponentSocketConfiguration socket) throws SettingNameLengthException, SettingInvalidNameException,
         SettingIllegalCharacterInDisplayNameException, SettingDisplayNameLengthException, SettingTagLengthException,
         VariableValueKeyLengthException {
@@ -44,10 +42,14 @@ public class SocketUploader implements SettingUploader<CampaignComponentSocketCo
         if (socket.getDisplayName().isPresent()) {
             socketBuilder.withDisplayName(socket.getDisplayName().get());
         }
-        if (socket.getFilter() != null) {
-            socketBuilder.withFilter()
-                .withComponentType(socket.getFilter().getComponentType());
+
+        if (socket.getFilters() != null && !socket.getFilters().isEmpty()) {
+            for (SocketFilterConfiguration socketFilterConfiguration : socket.getFilters().stream()
+                .filter(value -> Objects.nonNull(value)).toList()) {
+                populateSocketFilterBuilder(socketBuilder, socketFilterConfiguration);
+            }
         }
+
         socket.getDescription().ifDefined((value) -> socketBuilder.withDescription(value));
         socketBuilder.withTags(socket.getTags());
         socketBuilder.withPriority(socket.getPriority());
@@ -57,24 +59,47 @@ public class SocketUploader implements SettingUploader<CampaignComponentSocketCo
 
         if (socket.getParameters() != null) {
             for (CampaignComponentVariableConfiguration parameter : socket.getParameters().stream()
-                .filter(variableRequest -> Objects.nonNull(variableRequest)).collect(Collectors.toList())) {
-                settingUploaders.stream()
-                    .filter(settingUploader -> settingUploader.getSettingType().equals(parameter.getType()))
-                    .findFirst()
-                    .orElse(defaultSettingUploader)
-                    .upload(context, socket, component, parameter);
+                .filter(variableRequest -> Objects.nonNull(variableRequest)).toList()) {
+                uploaderRegistry.getUploader(parameter.getType())
+                    .orElse(uploaderRegistry.getDefaultUploader())
+                    .upload(uploaderRegistry, context, socket, component, parameter);
             }
         }
     }
 
     @Override
-    public void upload(CampaignUploadContext context, CampaignComponentSocketConfiguration socket,
+    public void upload(SettingUploaderRegistry uploaderRegistry,
+        CampaignUploadContext context, CampaignComponentSocketConfiguration socket,
         CampaignComponentConfiguration component, CampaignComponentSocketConfiguration socketConfiguration) {
         // no-op
     }
 
     @Override
-    public SettingType getSettingType() {
-        return SettingType.MULTI_SOCKET;
+    public List<SettingType> getSettingTypes() {
+        return List.of(SettingType.MULTI_SOCKET, SettingType.SOCKET);
     }
+
+    private void populateSocketFilterBuilder(SocketBuilder builder, SocketFilterConfiguration filterConfiguration) {
+        SocketFilterBuilder filterBuilder =
+            builder.withFilter(
+                com.extole.model.entity.campaign.SocketFilterType.valueOf(filterConfiguration.getType().name()));
+
+        if (com.extole.model.entity.campaign.SocketFilterType.COMPONENT_TYPE == filterBuilder.getType()) {
+            ComponentTypeSocketFilterBuilder exactBuilder = (ComponentTypeSocketFilterBuilder) filterBuilder;
+            ComponentTypeSocketFilterConfiguration exactRequest =
+                (ComponentTypeSocketFilterConfiguration) filterConfiguration;
+            exactBuilder.withComponentType(exactRequest.getComponentType());
+            return;
+        }
+        if (SocketFilterType.FACET == filterBuilder.getType()) {
+            ComponentFacetSocketFilterBuilder exactBuilder = (ComponentFacetSocketFilterBuilder) filterBuilder;
+            ComponentFacetSocketFilterConfiguration exactRequest =
+                (ComponentFacetSocketFilterConfiguration) filterConfiguration;
+            exactBuilder.withName(exactRequest.getName());
+            exactBuilder.withValue(exactRequest.getValue());
+            return;
+        }
+        throw new IllegalArgumentException("Can't map filter type: " + filterBuilder.getType());
+    }
+
 }
